# RigidDynamics

./: .gitignore  CMakeLists.txt  README.md  camera.cc  camera.h  main.cc  render.cc  render.h
bodies/: body_manager.cc  body_manager.h  drawable_rigid_body.cc  drawable_rigid_body.h  random_color_generator.cc  random_color_generator.h  rigid_body.cc  rigid_body.h  rigid_box.cc  rigid_box.h  rigid_sphere.cc  rigid_sphere.h
bodies/contacts/: body_interaction.cc  body_interaction.h  collision_detector.cc  collision_detector.h  contact.cc  contact.h
